# Willans-formula

./: CMakeLists.txt  LICENSE.txt  README.md
cpp/: WF.hpp  WF_base.hpp  WF_impl.hpp  all_until_nth_prime.cpp  nth_prime.cpp
py/: WF.py  all_until_nth_prime.py  nth_prime.py
py/conc/: Willan.py
py/seq/: Willan.py  Willans.py  all_until_nth_prime.py
